--- a/.gitattributes
+++ b/.gitattributes
@@ -7,4 +7,5 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text 
 *.zip filter=lfs diff=lfs merge=lfs -text
