add testing to demo app (June 2025 delivery)

--- a/.env.example
+++ b/.env.example
@@ -1,53 +1,45 @@
 # =============================================================================
-# Azure AI Services Configuration - AI-900 Course
-# EXAMPLE FILE FOR LEARNERS - Replace with your actual values
+# Azure AI Services Configuration for AI-900 Demos and Tests
 # =============================================================================
 
-# Azure AI Services Multi-Service (Primary - use this for most demos)
-AI_SERVICES_ENDPOINT=https://YOUR_REGION.api.cognitive.microsoft.com/
-AI_SERVICES_KEY=YOUR_AI_SERVICES_KEY_HERE
+# Multi-service key for Computer Vision, Language, and other cognitive capabilities
+AI_SERVICES_KEY=your_multi_service_key_here
+AI_SERVICES_ENDPOINT=https://your-region.api.cognitive.microsoft.com
 
-# Azure OpenAI Service
-AZURE_OPENAI_ENDPOINT=https://YOUR_OPENAI_RESOURCE_NAME.openai.azure.com/
-AZURE_OPENAI_KEY=YOUR_OPENAI_KEY_HERE
+# Analyzes images for objects, faces, text recognition, and scene understanding
+COMPUTER_VISION_KEY=your_computer_vision_key_here
+COMPUTER_VISION_ENDPOINT=https://your-computervision-service.cognitiveservices.azure.com
 
-# Speech Services
-SPEECH_SERVICE_ENDPOINT=https://YOUR_REGION.api.cognitive.microsoft.com/
-SPEECH_SERVICE_KEY=YOUR_SPEECH_KEY_HERE
+# Processes text for sentiment analysis, language detection, and key phrase extraction
+LANGUAGE_SERVICE_KEY=your_language_service_key_here
+LANGUAGE_SERVICE_ENDPOINT=https://your-language-service.cognitiveservices.azure.com
 
-# Language Service
-LANGUAGE_SERVICE_ENDPOINT=https://YOUR_REGION.api.cognitive.microsoft.com/
-LANGUAGE_SERVICE_KEY=YOUR_LANGUAGE_KEY_HERE
+# Extracts structured data from forms, receipts, invoices, and business documents
+DOCUMENT_INTELLIGENCE_KEY=your_form_recognizer_key_here
+DOCUMENT_INTELLIGENCE_ENDPOINT=https://your-formrecognizer-service.cognitiveservices.azure.com
 
-# Computer Vision Service
-COMPUTER_VISION_ENDPOINT=https://YOUR_REGION.api.cognitive.microsoft.com/
-COMPUTER_VISION_KEY=YOUR_COMPUTER_VISION_KEY_HERE
+# Provides access to GPT models for chat completions and text generation
+AZURE_OPENAI_KEY=your_azure_openai_key_here
+AZURE_OPENAI_ENDPOINT=https://your-openai-service.openai.azure.com
+AZURE_OPENAI_DEPLOYMENT_NAME=gpt-35-turbo
 
-# Document Intelligence Service
-DOCUMENT_INTELLIGENCE_ENDPOINT=https://YOUR_REGION.api.cognitive.microsoft.com/
-DOCUMENT_INTELLIGENCE_KEY=YOUR_DOCUMENT_INTELLIGENCE_KEY_HERE
+# Converts speech to text, text to speech, and provides real-time translation
+SPEECH_SERVICE_KEY=your_speech_service_key_here
+SPEECH_SERVICE_ENDPOINT=https://your-speech-service.cognitiveservices.azure.com
+SPEECH_SERVICE_REGION=your_region_here
 
-# Content Safety Service
-CONTENT_SAFETY_ENDPOINT=https://YOUR_REGION.api.cognitive.microsoft.com/
-CONTENT_SAFETY_KEY=YOUR_CONTENT_SAFETY_KEY_HERE
+# Enables full-text search, semantic search, and AI-powered search suggestions
+SEARCH_SERVICE_KEY=your_search_admin_key_here
+SEARCH_SERVICE_ENDPOINT=https://your-search-service.search.windows.net
+SEARCH_INDEX_NAME=your_search_index_name
 
-# Custom Vision Services
-CUSTOM_VISION_TRAINING_ENDPOINT=https://YOUR_REGION.api.cognitive.microsoft.com/
-CUSTOM_VISION_TRAINING_KEY=YOUR_CUSTOM_VISION_TRAINING_KEY_HERE
-CUSTOM_VISION_PREDICTION_ENDPOINT=https://YOUR_REGION.api.cognitive.microsoft.com/
-CUSTOM_VISION_PREDICTION_KEY=YOUR_CUSTOM_VISION_PREDICTION_KEY_HERE
+# Detects harmful content, adult material, hate speech, and violence in text/images
+CONTENT_SAFETY_KEY=your_content_safety_key_here
+CONTENT_SAFETY_ENDPOINT=https://your-contentsafety-service.cognitiveservices.azure.com
 
-# Search Service
-SEARCH_SERVICE_ENDPOINT=https://YOUR_SEARCH_SERVICE_NAME.search.windows.net/
-SEARCH_SERVICE_KEY=YOUR_SEARCH_KEY_HERE
-
-# Common Azure Settings
-AZURE_RESOURCE_GROUP=YOUR_RESOURCE_GROUP_NAME
-AZURE_LOCATION=YOUR_AZURE_REGION
-
-# =============================================================================
-# Instructions for Learners:
-# 1. Copy this file to .env
-# 2. Replace all YOUR_* placeholders with actual values from Azure Portal
-# 3. Never commit the .env file to version control (its in .gitignore)
-# =============================================================================
+# Custom image classification and object detection models
+CUSTOM_VISION_PREDICTION_KEY=your_prediction_key_here
+CUSTOM_VISION_TRAINING_KEY=your_training_key_here
+CUSTOM_VISION_ENDPOINT=https://your-customvision-service.cognitiveservices.azure.com
+CUSTOM_VISION_PROJECT_ID=your_project_id_here
+CUSTOM_VISION_PUBLISHED_NAME=your_published_iteration_name
