--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "node app.js",
     "dev": "nodemon app.js --colors --watch . --ext js,json,env",
     "dev:web": "nodemon web-server.js --colors --watch . --ext js,json,env",
-    "test": "echo \"No tests yet - focus on learning! 🎯\" && exit 0",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
+    "test:ci": "jest --ci --coverage --maxWorkers=2",
     "force-close": "node -e \"require('child_process').exec('lsof -ti:3000 | xargs kill -9', () => console.log('🔧 Port 3000 freed up!'))\"",
     "web": "node web-server.js",
     "logs": "tail -f logs/app.log",
@@ -24,25 +28,28 @@
   "author": "Tim Warner <tim@techtrainertim.com>",
   "license": "MIT",
   "dependencies": {
-    "@azure/cognitiveservices-computervision": "^8.2.0",
-    "@azure/ai-text-analytics": "^5.1.0",
-    "@azure/ms-rest-azure-js": "^2.1.0",
     "@azure/ai-form-recognizer": "^5.0.0",
+    "@azure/ai-text-analytics": "^5.1.0",
+    "@azure/cognitiveservices-computervision": "^8.2.0",
+    "@azure/ms-rest-azure-js": "^2.1.0",
     "axios": "^1.6.2",
     "chalk": "^4.1.2",
-    "inquirer": "^8.2.6",
-    "figlet": "^1.7.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
+    "figlet": "^1.7.0",
+    "inquirer": "^8.2.6",
     "microsoft-cognitiveservices-speech-sdk": "^1.34.1",
+    "multer": "^1.4.5-lts.1",
     "openai": "^4.20.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
+    "@types/jest": "^29.5.14",
+    "debug": "^4.3.4",
+    "jest": "^29.7.0",
     "morgan": "^1.10.0",
-    "winston": "^3.11.0",
-    "debug": "^4.3.4"
+    "nodemon": "^3.0.2",
+    "supertest": "^7.1.1",
+    "winston": "^3.11.0"
   },
   "engines": {
     "node": ">=18.0.0"
