docs: add AGENTS.md and INDEX; reorganize docs to docs/, move scripts/assets; add .env examples and READMEs; env-driven samples with friendly messages

--- a/.gitignore
+++ b/.gitignore
@@ -198,6 +198,9 @@ PublishScripts/
 
 # Microsoft Azure Build Output
 csx/
+
+# Environment files (security)
+**/.env
 *.build.csdef
 
 # Microsoft Azure Emulator
