--- a/apps/compvision-js-sdk/package.json
+++ b/apps/compvision-js-sdk/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@azure/cognitiveservices-computervision": "^7.0.1",
     "@azure/ms-rest-js": "^2.0.8",
-    "async": "^3.2.0"
+    "async": "^3.2.0",
+    "dotenv": "^16.4.0"
   }
 }
